_generated-doc/2.7/config/quarkus-kubernetes-service-binding-buildtime-service-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-service-binding-buildtime-service-config_configuration]]link:#quarkus-kubernetes-service-binding-buildtime-service-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.binding]]`link:#quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.binding[quarkus.kubernetes-service-binding.services."services".binding]`

[.description]
--
The name of the service binding. If no value is specified the id of the service will be used instead.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.kind]]`link:#quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.kind[quarkus.kubernetes-service-binding.services."services".kind]`

[.description]
--
The kind of the service.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.api-version]]`link:#quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.api-version[quarkus.kubernetes-service-binding.services."services".api-version]`

[.description]
--
The apiVersion of the service
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.name]]`link:#quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.name[quarkus.kubernetes-service-binding.services."services".name]`

[.description]
--
The name of the service. When this is empty the key of the service is meant to be used as name.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.namespace]]`link:#quarkus-kubernetes-service-binding-buildtime-service-config_quarkus.kubernetes-service-binding.services.-services-.namespace[quarkus.kubernetes-service-binding.services."services".namespace]`

[.description]
--
The namespace of the service.
--|string 
|

|===